feat : 회원가입 시 비밀번호 암호화 & 회원가입용Form 적용

--- a/src/main/resources/templates/form/signup.html
+++ b/src/main/resources/templates/form/signup.html
@@ -48,7 +48,7 @@
     <div class="input-form-background row">
         <div class="input-form col-md-12 mx-auto">
             <h4 class="mb-3">회원가입</h4>
-            <form th:action th:object="${user}" method="post">
+            <form th:action th:object="${signupForm}" method="post">
                 <div class="mb-3">
                     <label for="name">이름</label>
                     <input type="text" class="form-control" id="name"
@@ -82,7 +82,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="password2">비밀번호 확인</label>
-                    <input type="password" class="form-control" id="password2" placeholder="비밀번호를 한 번 더 입력하세요">
+                    <input type="password" class="form-control" id="password2" th:field="*{password2}" placeholder="비밀번호를 한 번 더 입력하세요">
                     <div class="field-error" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
                         비밀번호 확인 오류
                     </div>
